@@ -7,7 +7,6 @@ import static org.mockito.Mockito.when;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
-import java.util.stream.Collectors;
 import nu.ndw.nls.routingmapmatcher.domain.model.Link;
 import nu.ndw.nls.routingmapmatcher.domain.model.MapMatchingSinglePointRequest;
 import nu.ndw.nls.routingmapmatcher.domain.model.MatchStatus;
@@ -45,8 +44,8 @@ class RoutingMapMatcherSinglePointTest {
 
     @BeforeEach
     void setup() {
-        final Iterator<Link> links = Collections.emptyIterator();
-        final List<SinglePointLocation> singlePointLocations = Collections.singletonList(singlePointLocation);
+        Iterator<Link> links = Collections.emptyIterator();
+        List<SinglePointLocation> singlePointLocations = Collections.singletonList(singlePointLocation);
 
         routingNetwork = RoutingNetwork.builder()
                 .networkNameAndVersion("test network")
@@ -64,8 +63,7 @@ class RoutingMapMatcherSinglePointTest {
                 .thenReturn(singlePointMapMatcher);
         when(singlePointMapMatcher.match(singlePointLocation)).thenReturn(singlePointMatch);
         when(singlePointMatch.getStatus()).thenReturn(MatchStatus.MATCH);
-        final List<SinglePointMatch> results = routingMapMatcher.matchLocations(routingNetwork, mapMatchingRequest)
-                .collect(Collectors.toList());
+        List<SinglePointMatch> results = routingMapMatcher.matchLocations(routingNetwork, mapMatchingRequest).toList();
         assertThat(results, hasSize(1));
     }
 }
